--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bunnynet-stream",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Leverage BunnyNET Stream APIs in your Node application",
   "main": "./lib/index.js",
   "files": [
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -118,6 +119,9 @@
     ]
   },
   "dependencies": {
-    "cross-fetch": "^3.1.5"
+    "axios": "^1.3.5",
+    "cross-fetch": "^3.1.5",
+    "crypto-js": "^4.1.1",
+    "tus-js-client": "^3.1.0"
   }
 }
